tests/negative/gold/export2-test.gold
tests/negative/export2-test.toit:6:8: error: Unresolved export 'foo'
export foo
       ^~~
Compilation failed
